# zoltanProj

./: CMakeLists.txt  vcpkg.json
Utilities/Timer/: timer.c
Utilities/shared/: zoltan_util.h
export/lib/: zoltan.lib
export/share/zoltan/: zoltanConfig-release.cmake  zoltanConfig.cmake
hier/: hier.c
include/: zoltan_types.h
lb/: low_mem_lb_migrate.c
tpls/: scotch_interface.c
tpls/cmake/tribits/win_interface/include/: gettimeofday.c
vcpkg/overlay-ports/ptscotch/: portfile.cmake  usage  vcpkg.json
vcpkg/overlay-triplets/: x64-linux.cmake
